Update default branch version in setup.yml and comment out orb source command in publish-dev.sh

--- a/orb/src/commands/setup.yml
+++ b/orb/src/commands/setup.yml
@@ -3,7 +3,7 @@ description: >
 parameters:
   branch:
     type: string
-    default: "main"
+    default: "v0.5.0"
     description: "The version of the circleci-utils to use"
 steps:
   - run:
