Refactor CircleCI orb commands and add new issue creation and metrics generation functionalities

--- a/orb/src/commands/create-github-issue-from-file.yml
+++ b/orb/src/commands/create-github-issue-from-file.yml
@@ -15,7 +15,7 @@ parameters:
   assignees:
     type: string
 steps:
-  - setup
+  - setup-circleci-utils
   - run:
       name: Create issue from file
       command: |
