--- a/orb/src/commands/get-github-access-token.yml
+++ b/orb/src/commands/get-github-access-token.yml
@@ -10,7 +10,7 @@ parameters:
   token-name:
     type: string
 steps:
-  - setup
+  - setup-circleci-utils
   - run:
       name: Get GitHub Access Token
       command: |
