Add GCP CLI orb and implement GitHub PR comment management commands

--- a/orb/src/commands/gcp-oidc-authenticate.yml
+++ b/orb/src/commands/gcp-oidc-authenticate.yml
@@ -25,6 +25,7 @@ parameters:
     type: string
     default: /home/circleci/oidc_token.json
 steps:
+  - gcp-cli/install
   - run:
       name: "Create OIDC credential configuration"
       command: |
