--- a/orb/src/commands/get-github-pr-comments.yml
+++ b/orb/src/commands/get-github-pr-comments.yml
@@ -9,7 +9,7 @@ parameters:
     type: string
   user-type:
     type: string
-    default: "User"
+    default: "Bot"
   token-name:
     type: env_var_name
     default: GITHUB_APP_TOKEN
@@ -17,11 +17,19 @@ parameters:
     type: string
     default: COMMENT_ID
     description: "The name of the environment variable to store the comment ID in"
+  condition:
+    type: string
+    default: "always"
+    description: "The condition to run the command. 0 and always are considered true, everything else is false"
 steps:
   - setup-circleci-utils
   - run:
       name: Get PR Comments
       command: |
+        if [ "<< parameters.condition >>" != "always" ] && [ "<< parameters.condition >>" != "0" ]; then
+          echo "Skipping command because condition is not met"
+          exit 0
+        fi
 
         COMMENT_ID=$( python $CIRCLECI_TOOLS_PATH get-pr-comments \
           --github-token "${<< parameters.token-name >>}" \
@@ -32,3 +40,4 @@ steps:
 
         COMMENT_ID=$(echo "$COMMENT_ID" | tr -d ' \n' | cut -d',' -f1)
         echo "export << parameters.output-comment-id >>=$COMMENT_ID" >> "$BASH_ENV"
+        echo "Comment ID: $COMMENT_ID for message: << parameters.message >> for PR: << parameters.pr-number >>"
