--- a/orb/src/commands/github-pages-deploy.yml
+++ b/orb/src/commands/github-pages-deploy.yml
@@ -8,6 +8,10 @@ parameters:
     type: string
     default: "gh-pages"
     description: "The branch to deploy to"
+  force-push:
+    type: boolean
+    default: false
+    description: "Whether to force push"
   token-name:
     type: env_var_name
     default: GITHUB_APP_TOKEN
@@ -24,8 +28,9 @@ steps:
           exit 0
         fi
 
+        # set up initial variables
         pages_branch="<< parameters.pages-branch >>"
-        pages_folder="<< parameters.src-pages-dir >>"
+        pages_folder=$(realpath "<< parameters.src-pages-dir >>")
 
         SOURCE_COMMIT=$(git rev-parse HEAD)
         SOURCE_REPO="${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}"
@@ -40,15 +45,27 @@ steps:
         git config --global user.name "${USERNAME}"
         git config --global user.email "${USER_EMAIL}"
 
-        # Remove all files from staging
-        git reset --hard  
+        #set up src directory
+        src_dir=$(mktemp -d)
+        cd $src_dir
+        git init
+        git remote add origin "https://x-access-token:${<< parameters.token-name >>}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git"
 
-        #checkout target branch
-        git fetch origin ${pages_branch} 
-        git checkout ${pages_branch}
-
-        # Clean working directory
-        rm -rf *
+        if [ "<< parameters.force-push >>" = true ]; then
+          # in case we are force pushing, we want a clean branch that we can push to
+          echo "Creating orphan branch for to always have a clean history for ${pages_branch}"
+          git checkout --orphan "${pages_branch}"
+        else
+          # Check if branch exists on remote
+          if git ls-remote --heads origin "${pages_branch}" | grep -q "${pages_branch}"; then
+              echo "Branch ${pages_branch} exists on remote, checking out..."
+              git fetch origin "${pages_branch}"
+              git checkout -b ${pages_branch} FETCH_HEAD
+          else
+              echo "Branch ${pages_branch} does not exist, creating..."
+              git checkout --orphan "${pages_branch}"
+          fi
+        fi
 
         # Copy new files
         cp -a ${pages_folder}/. .
@@ -56,4 +73,9 @@ steps:
         # Commit and push
         git add .
         git commit -m "Deploying to ${pages_branch} from @ ${SOURCE_REPO}@${SOURCE_COMMIT} 🚀"
-        git push "https://x-access-token:${<< parameters.token-name >>}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git" ${pages_branch}
+
+        if [ "<< parameters.force-push >>" = true ]; then
+          git push --set-upstream origin ${pages_branch} --force
+        else
+          git push --set-upstream origin ${pages_branch} 
+        fi
