--- a/orb/src/commands/github-commit-and-push-changes.yml
+++ b/orb/src/commands/github-commit-and-push-changes.yml
@@ -71,13 +71,13 @@ steps:
 
         SKIP_CI=""
         if [ "<< parameters.skip-ci >>" = true ]; then
-          SKIP_CI="[skip ci]"
+          SKIP_CI="[skip ci] "
         fi
 
 
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "<< parameters.commit-message >> ${SKIP_CI}"
+          git commit -m "${SKIP_CI}<< parameters.commit-message >>"
           git push "https://x-access-token:${<<parameters.github-token>>}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git" ${CIRCLE_BRANCH}
         fi
