--- a/orb/src/commands/post-github-pr-comment.yml
+++ b/orb/src/commands/post-github-pr-comment.yml
@@ -11,15 +11,12 @@ parameters:
   comment-body:
     type: string
     description: "The body of the comment to post"
-  token-name:
-    type: env_var_name
-    default: GITHUB_APP_TOKEN
   condition:
     type: string
     default: "always"
     description: "The condition to run the command. 0 and always are considered true, everything else is false"
 steps:
-  - setup-circleci-utils
+  - setup-circleci-utils-and-github-token
   - run:
       name: Post PR Comments
       command: |
@@ -34,7 +31,7 @@ steps:
         fi
 
         python $CIRCLECI_TOOLS_PATH post-pr-comment \
-              --github-token "${<< parameters.token-name >>}" \
+              --github-token "${token}" \
               --repo "<< parameters.repo >>" \
               --pr-number "<< parameters.pr-number >>" \
               --comment-body "<< parameters.comment-body >>" \
