--- a/orb/src/commands/delete-github-pr-comment.yml
+++ b/orb/src/commands/delete-github-pr-comment.yml
@@ -13,7 +13,7 @@ parameters:
     default: "always"
     description: "The condition to run the command. 0 and always are considered true, everything else is false"
 steps:
-  - setup-circleci-utils
+  - setup-circleci-utils-and-github-token
   - run:
       name: Delete PR Comments
       command: |
