--- a/orb/src/commands/get-github-pr-comments.yml
+++ b/orb/src/commands/get-github-pr-comments.yml
@@ -19,7 +19,7 @@ parameters:
     default: "always"
     description: "The condition to run the command. 0 and always are considered true, everything else is false"
 steps:
-  - setup-circleci-utils
+  - setup-circleci-utils-and-github-token
   - run:
       name: Get PR Comments
       command: |
