--- a/orb/src/commands/get-github-pr-comments.yml
+++ b/orb/src/commands/get-github-pr-comments.yml
@@ -3,6 +3,8 @@ description: >
 parameters:
   repo:
     type: string
+    default: "$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
+    description: "The repository to get the comments from"
   pr-number:
     type: string
   message:
