--- a/orb/src/commands/post-github-pr-comment.yml
+++ b/orb/src/commands/post-github-pr-comment.yml
@@ -3,6 +3,8 @@ description: >
 parameters:
   repo:
     type: string
+    default: "$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
+    description: "The repository to post the comment to"
   pr-number:
     type: string
   comment-id:
