Simplify GitHub commit command with streamlined workflow
Refactor the GitHub commit and push command to:
- Rename 'path' parameter to 'folder'
- Simplify git operations and branch handling
- Remove verbose logging and error checks
- Use project-level variables for repository details
- Improve overall command reliability and readability

--- a/orb/src/commands/github-commit-and-push-changes.yml
+++ b/orb/src/commands/github-commit-and-push-changes.yml
@@ -1,6 +1,10 @@
 description: >
   This command commit and push a folder change to a specific repo/branch
 parameters:
+  github-token:
+    type: env_var_name
+    description: "The GitHub token to use for the GitHub API"
+    default: GITHUB_APP_TOKEN
   repo:
     type: string
     default: "$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
@@ -9,10 +13,9 @@ parameters:
     type: string
     default: $CIRCLE_BRANCH
     description: "Branch where to commit to"
-  path:
+  folder:
     type: string
-    description: "Path to the folder to commit, can be a directory or a file"
-    default: "."
+    description: "Folder to commit"
   commit-message:
     type: string
     description: "Message to use"
@@ -34,7 +37,6 @@ parameters:
     default: "always"
     description: "The condition to run the command. 0 and always are considered true, everything else is false"
 steps:
-  - setup-circleci-utils-and-github-token
   - run:
       name: Commit and Push Changes
       command: |
@@ -43,19 +45,11 @@ steps:
           exit 0
         fi
 
-        token=$(cat $SECRET_ACCESS_TOKEN_FILE_PATH) 
-
         if [ -z "<< parameters.commit-username >>" ]; then
           # Get the username of the user that triggered the event
           USERNAME=${CIRCLE_USERNAME}
         else
           USERNAME="<< parameters.commit-username >>"
-        fi
-
-        echo "USERNAME: $USERNAME"
-        if [ -z "$USERNAME" ]; then
-          echo "USERNAME is empty"
-          exit 0
         fi
 
         if [ -z "<< parameters.commit-email >>" ]; then
@@ -66,47 +60,17 @@ steps:
           USER_EMAIL="<< parameters.commit-email >>"
         fi
 
-        if [ -z "$USER_EMAIL" ]; then
-          echo "USER_EMAIL is empty"
-          exit 0
-        fi
-
-        echo "USER_EMAIL: $USER_EMAIL"
-
         # Git operations with committer's identity
         git config --global user.name "${USERNAME}"
         git config --global user.email "${USER_EMAIL}"
 
-        #get absolute path of the path
-        AbsolutePath=$(realpath "<< parameters.path >>")
-        echo "AbsolutePath: ${AbsolutePath}"
+        cd "<< parameters.folder >>"
 
-        
-        # cd into the directory of the path only if it's a file
-        if [ -f "${AbsolutePath}" ]; then
-          cd "$(dirname "${AbsolutePath}")"
-          echo "cd into the directory of the path only if it's a file"
-        else
-          echo "cd into the directory of the path"  
-          cd "$(dirname "${AbsolutePath}")"
-        fi
+        git pull
 
-        
-
-        # Update the remote URL to use the token
-        git remote set-url origin "https://x-access-token:${token}@github.com/<< parameters.repo >>.git"
-        
-        # Switch to the target branch first
-        echo "Switching to branch << parameters.branch >>..."
-        git checkout "<< parameters.branch >>" || git checkout -b "<< parameters.branch >>"
-
-        # Pull latest changes from the branch
-        echo "Pulling latest changes..."
-        git pull origin "<< parameters.branch >>"
-
-        # Stage the specified path
-        git add "${AbsolutePath}" -n  # Dry run to show what would be added
-        git add "${AbsolutePath}"
+        # Stage changes first
+        git add . -n  # Dry run to show what would be added
+        git add .
 
         # Create commit if there are changes
         if git diff --staged --quiet; then
@@ -114,14 +78,12 @@ steps:
           exit 0
         fi
 
+        echo "Committing changes..."
+        git commit -m "${SKIP_CI}<< parameters.commit-message >>"
+
         SKIP_CI=""
         if [ "<< parameters.skip-ci >>" = true ]; then
           SKIP_CI="[skip ci] "
         fi
 
-        echo "Committing changes..."
-        git commit -m "${SKIP_CI}${parameters.commit-message}"
-
-        echo "Pushing changes..."
-        git push origin "<< parameters.branch >>"
-
+        git push "https://x-access-token:${<<parameters.github-token>>}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git" "<< parameters.branch >>"
